--- a/src/components/HomePageComponents/Home.css
+++ b/src/components/HomePageComponents/Home.css
@@ -50,7 +50,7 @@
   text-align: center;
 }
 
-@media screen and (min-width: 600px) {
+@media all and (max-width: 675px) {
   .postedItemsMainDisplay {
     flex-direction: column;
     text-align: center;
@@ -58,5 +58,9 @@
 
   .postedItemsSection {
     justify-content: center;
+  }
+
+  .addressInputFields {
+    display: block;
   }
 }
