--- a/src/pages/Layout.css
+++ b/src/pages/Layout.css
@@ -87,17 +87,24 @@
   right: 0;
   top: 50px;
   width: 300px;
-  background: black;
+  background: rgba(128, 128, 128, 1);
   max-height: 200px;
   overflow: auto;
   padding: 10px;
 }
 
 .logoutButton {
-  margin-right: auto;
-  margin-left: auto;
-  width: 100px;
-  height: 50px;
+    margin-left: auto;
+    background: none;
+    border: none;
+    width: 100px;
+    height: 50px;
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+.logoutButton:hover {
+  color: white;
 }
 
 .notificationMessage {
